Fix the buttons not correctly being aligned on mobile

--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -22,10 +22,17 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .buttons a:first-child {
   margin-right: 15px;
+}
+
+@media only screen and (max-width: 541px) {
+  .buttons a:first-child {
+    margin-bottom: 15px;
+  }
 }
 
 .features {
